Reorganização das classes de conexão

--- a/strings.resx
+++ b/strings.resx
@@ -120,4 +120,17 @@
   <data name="ScoreView_Speed__0___lines_s_" xml:space="preserve">
     <value>{0} (linhas/s)</value>
   </data>
+  <data name="SQLite_Create" xml:space="preserve">
+    <value>CREATE TABLE IF NOT EXISTS "pontuacao" (
+	"id"	INTEGER NOT NULL,
+	"nome"	TEXT NOT NULL,
+	"score"	INTEGER NOT NULL,
+	"nivel"	INTEGER NOT NULL,
+	"tempo_jogo"	TEXT NOT NULL,
+	"qtd_pecas"	INTEGER NOT NULL,
+	"data_score"	TEXT NOT NULL,
+	"tabuleiro"	BLOB NOT NULL,
+	PRIMARY KEY("id" AUTOINCREMENT)
+);</value>
+  </data>
 </root>
